# creditas-simulator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py  routes.py  services.py
app/adapters/mapper/: loan_simulation_mapper.py  response_mapper.py
app/core/configs/: settings.py
app/core/constants/: errors.py
app/domain/models/: contact_model.py  financial_model.py  personal_model.py
app/dtos/: loan_request.py
app/factories/: email_factory.py  loan_simulation_factory.py  result_simulation_factory.py
app/routers/: simulate_controller.py  simulate_controller_v2.py  token_controller.py
app/service/messaging/: sqs_consumer.py  sqs_service.py
app/service/simulation/: loan_validation_service.py
app/tests/: test_main.http  test_routes.py  test_services.py
app/validators/auth/: validate_token.py
app/validators/simulation/: process_loan_simulation.py  validate_loan_request.py
backend/: Dockerfile  docker-compose.yml
backend/app/: main.py
backend/app/controller/: simulate_controller.py  simulate_controller_v2.py
backend/app/factory_backend/: email_factory.py  loan_simulation_factory.py  result_simulation_factory.py
backend/tests/: test_generate_email_body.py  test_process_loan_simulation.py  test_sqs_service.py
docs/: business_rules_architecture.md  creditas.postman_collection.json  regras_negocio_arquitetura.md  request_endpoint_tests.http
init-scripts/: create-sqs.sh
tests/: sqs_test.py  test_generate_email_body.py  test_process_loan_simulation.py  test_sqs_service.py
(+12 files in other folders)
